--- a/stylesheetType.css
+++ b/stylesheetType.css
@@ -174,7 +174,7 @@
         font-family: "Newsreader", serif;
         font-optical-sizing: auto;
         font-weight: 300;
-        font-style: italic;
+        font-style: normal;
         font-size: 20px;
         color: rgb(48, 48, 66);
         letter-spacing: 0.05em;
