--- a/stylesheetUme.css
+++ b/stylesheetUme.css
@@ -319,7 +319,7 @@
         border: 1px solid rgb(237,237,240);
         border-radius: 20px;
     }
-    #leftcsLink h1{
+    #leftcsLink h2{
         margin-top: 0px;
         margin-bottom: 0px;
     }
@@ -333,7 +333,7 @@
         border: 1px solid rgb(237,237,240);
         border-radius: 20px;
     }
-    #rightcsLink h1{
+    #rightcsLink h2{
         margin-top: 0px;
         margin-bottom: 0px;
     }
